# geec_tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  geec.sh  geec_corr.sh  geec_filter.sh
R/: heatmap.R
bg_to_hdf5/: CMakeLists.txt  bg_to_hdf5.cpp
bw_to_hdf5/: CMakeLists.txt  bw_to_hdf5.cpp
bwreader/: CMakeLists.txt
correlation/: CMakeLists.txt  correlation.cpp
correlation_nm/: CMakeLists.txt  correlation.cpp  correlation_nm.cpp
filter/: CMakeLists.txt  filter.cpp
python/: bigwig.py  config.py  database.py  db_script.py  filter_hdf5.py  geec.py  geec_config  geec_config.py  geec_corr.py  geec_corr_nm.py  geec_json.py  geec_list_converter.py  ihec_json.py  ihec_to_json.py  json_to_input.py  kent.py  main.py  make_matrix.py  make_matrix_nm.py  md52name.py  post_validator.py  stats.py  to_hdf5.py  validator.py
python/utils/: config.py  geec_tools.py  utils.py
python_old/: bigwig.py  bwbgbw.py  complete_matrix.py  geec.py  geec_corr.py  h5dump2bedgraph.py  kent.py  post_validator.py  utils.py
resource/public/: hg19_100kb_all_blklst.list  hg19_100kb_all_none.list  hg19_10kb_all_blklst.list  hg19_10kb_all_none.list  hg19_1kb_all_blklst.list  hg19_1kb_all_none.list  hg38_10kb_all_blklst.list  hg38_10kb_all_none.list  hg38_1kb_all_blklst.list  hg38_1kb_all_none.list  mm10_10kb_all_blklst.list  mm10_10kb_all_none.list  mm10_1kb_all_blklst.list  (+2 more)
sql/: geff_db_cre.sql  geff_db_ini.sql  geff_db_meta.sql
to_hdf5/: CMakeLists.txt  to_hdf5.cpp
to_zscore/: CMakeLists.txt  to_zscore.cpp
utils/: CMakeLists.txt
validate/: CMakeLists.txt  validate.cpp
(+30 files in other folders)
